<?xml version="1.0" encoding="utf-8"?>
<resources>    
    <string name="heard">&#xf042;</string>
    <string name="app_name">茶码头</string>
    <string name="action_settings">Settings</string>
    <string name="main_menu_goods">商品管理</string>
    <string name="main_menu_order">订单管理</string>
    <string name="main_menu_myinfo">店家资料</string>
    <string name="main_menu_picshow">显示图片</string>
    <string name="main_menu_picnoshow">隐藏图片</string>
    <string name="main_menu_cache">清除缓存</string>
    <string name="main_menu_email">意见反馈</string>
    <string name="main_menu_about">关于我们</string>
    <string name="main_menu_setting">系统设置</string>
    <string name="main_menu_exit">退出程序</string>
    <string name="unknown_error">未知错误</string>
    <string name="net_error">网络错误</string>
    <string name="frame_title_goods_list">商品</string>
    <string name="frame_title_order">订单</string>
    <string name="frame_title_active_atme">我的空间</string>
    <string name="frame_title_active_comment">评论</string>
    
    <string name="footbar_refresh">刷新</string>
    <string name="footbar_comment">评论</string>
    <string name="footbar_share">分享</string>
    <string name="footbar_favorite">收藏</string>
    <string name="footbar_more">更多</string>
    
    <string name="login_dialog_logo">茶码头</string>
    <string name="login_dialog_shoptel">注册电话:</string>
    <string name="login_dialog_shop">商家名称:</string>
    <string name="login_dialog_shopaddr">地址:</string>
    <string name="login_dialog_account">商家账号:</string>
    <string name="login_dialog_account_hint">输入账号</string>
    <string name="login_dialog_password">密码:</string>
    <string name="login_dialog_password_hint">输入密码</string>
    <string name="login_dialog_reg">加 盟</string>
    <string name="login_dialog_login">登  录</string>
    <string name="login_dialog_rememberPW">记住密码:</string>
    <string name="login_dialog_autoLogin">自动登录:</string>
    <string name="login_dialog_rememberMe">记住我的登录信息</string>
    
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_tap_label">下拉可以刷新</string>
    <string name="pull_to_refresh_update">最近更新：</string>
    
    <string name="order_placetime">下单时间</string>
    <string name="memo">备注</string>
    <string name="status">状态</string>
    <string name="profit_detail_date">交易时间</string>
    <string name="custom_title">打印</string>
    <string name="title_left_text">已连接</string>
    <string name="title_right_text">已连接</string>
    <string name="pclose">关闭</string>
    <string name="not_connect">未连接</string>
    <string name="connect">连接中...</string>
    <string name="ok_connect">已连接</string>
    
    <string name="new_goods_head_title">新商品</string>
    <string name="edit_store_head_title">编辑商铺</string>
    
    <string name="camera">商品图片</string>
    <string name="upload">上传</string>
    <string name="comment_pub_head_title">评论回复</string>
    <string name="searchHint">输入评论</string>
    <string name="searchLabel">---共有 %d 条评论---</string>
    <string name="okLabel">确定</string>
    <string name="cancelLabel">取消</string>
    
    <string name="img_from_camera">手机拍照</string>
    <string name="img_from_album">手机相册</string>
    <string name="ui_insert_image">插入图片</string>  
    
    <string name="setting_head_title">系统设置</string>
</resources>
