<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/logindialog_space"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/welcome" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/register"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:background="@color/red"
            android:text="@string/login_dialog_reg"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_21" />

        <Button
            android:id="@+id/login_btn_login"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:background="#0377ee"
            android:text="@string/login_dialog_login"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_21" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="220dp"
        android:layout_height="37dp"
        android:layout_above="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="184dp"
        android:background="@drawable/login_user" >

        <AutoCompleteTextView
            android:id="@+id/login_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70.0dip"
            android:layout_marginRight="8.0dip"
            android:layout_marginTop="10.0dip"
            android:background="@null"
            android:hint="@string/login_dialog_account_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:text=""
            android:textSize="@dimen/text_size_16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="220dp"
        android:layout_height="37dp"
        android:layout_alignTop="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/login_pwd" >

        <EditText
            android:id="@+id/login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70.0dip"
            android:layout_marginRight="8.0dip"
            android:layout_marginTop="10.0dip"
            android:background="@null"
            android:hint="@string/login_dialog_password_hint"
            android:maxLines="1"
            android:password="true"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textSize="@dimen/text_size_16" />
    </LinearLayout>

</RelativeLayout>