<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/logindialog_space"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/welcome" >

    <ScrollView
        android:id="@+id/login_scrollview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingLeft="14.0dip"
        android:paddingRight="14.0dip"
        android:paddingTop="14.0dip"
        android:scrollbars="none" >

        <ViewSwitcher
            android:id="@+id/logindialog_view_switcher"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="354dp"
                android:background="@drawable/login_bg"
                android:paddingBottom="20.0dip"
                android:paddingTop="30.0dip" >

                <TableLayout
                    android:id="@+id/login_user_table"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="15.0dip"
                    android:layout_marginRight="15.0dip"
                    android:layout_marginTop="10.0dip"
                    android:background="@color/white"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8.0dip"
                            android:layout_marginTop="10.0dip"
                            android:text="@string/login_dialog_shoptel"
                            android:textColor="#ff000000"
                            android:textSize="@dimen/text_size_16"
                            android:textStyle="bold" />

                        <AutoCompleteTextView
                            android:id="@+id/reg_tel"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8.0dip"
                            android:layout_marginRight="8.0dip"
                            android:layout_marginTop="10.0dip"
                            android:background="@null"
                            android:hint="输入电话"
                            android:inputType="phone"
                            android:maxLines="1"
                            android:selectAllOnFocus="true"
                            android:singleLine="true"
                            android:text=""
                            android:textSize="@dimen/text_size_16" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2.0dip"
                        android:layout_marginRight="2.0dip"
                        android:layout_marginTop="5.0dip"
                        android:scaleType="fitXY"
                        android:src="@drawable/login_line" />
					<LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8.0dip"
                            android:layout_marginTop="10.0dip"
                            android:text="登录密码:"
                            android:textColor="#ff000000"
                            android:textSize="@dimen/text_size_16"
                            android:textStyle="bold" />

                        <AutoCompleteTextView
                            android:id="@+id/reg_pwd"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8.0dip"
                            android:layout_marginRight="8.0dip"
                            android:layout_marginTop="10.0dip"
                            android:background="@null"
                            android:password="true"
            				android:hint="输入密码"
                            android:inputType="phone"
                            android:maxLines="1"
                            android:selectAllOnFocus="true"
                            android:singleLine="true"
                            android:text=""
                            android:textSize="@dimen/text_size_16" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2.0dip"
                        android:layout_marginRight="2.0dip"
                        android:layout_marginTop="5.0dip"
                        android:scaleType="fitXY"
                        android:src="@drawable/login_line" />
                    <LinearLayout
                        android:id="@+id/reg_uly"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8.0dip"
                            android:layout_marginTop="10.0dip"
                            android:text="@string/login_dialog_shop"
                            android:textColor="#ff000000"
                            android:textSize="@dimen/text_size_16"
                            android:textStyle="bold" />

                        <AutoCompleteTextView
                            android:id="@+id/reg_name"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8.0dip"
                            android:layout_marginRight="8.0dip"
                            android:layout_marginTop="10.0dip"
                            android:background="@null"
                            android:hint="输入商家名称"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:selectAllOnFocus="true"
                            android:singleLine="true"
                            android:text=""
                            android:textSize="@dimen/text_size_16" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2.0dip"
                        android:layout_marginRight="2.0dip"
                        android:layout_marginTop="5.0dip"
                        android:scaleType="fitXY"
                        android:src="@drawable/login_line" />

                    

                    
                </TableLayout>
                <TableLayout
                    android:id="@+id/login_user_vcode"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/login_user_table"
                    android:layout_alignRight="@+id/login_user_table"
                    android:layout_below="@+id/login_user_table"
                    android:layout_marginTop="20dip"
                        android:orientation="vertical"
                    android:stretchColumns="0,2" >
<LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dip" >

                        <AutoCompleteTextView
                            android:id="@+id/vcode"
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:background="@drawable/tucar_rect_off"
                            android:hint="请输入验证码"
                            android:imeOptions="actionDone"
                            android:inputType="phone"
                            android:padding="8dip"
                            android:singleLine="true"
                            android:textColor="#FF444444"
                            android:textColorHint="#FFE0E0E0"
                            android:textSize="@dimen/text_size_16" />

                        <Button
                            android:id="@+id/vcode_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="10dip"
                            android:background="@drawable/login_btn"
                            android:text="获取验证码"
                            android:textColor="#FFFFFFFF"
                            android:textSize="14dip" />
                    </LinearLayout>
                 </TableLayout>
                <TableLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/login_user_table"
                    android:layout_alignRight="@+id/login_user_table"
                    android:layout_below="@+id/login_user_vcode"
                    android:orientation="vertical"
                    android:stretchColumns="0,2" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:layout_marginTop="10dp" >

                        <CheckBox
                            android:id="@+id/login_checkbox_agree"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left|center"
                            android:button="@drawable/login_checkbox_selector"
                            android:checked="true"
                            android:paddingLeft="20dip"
                            android:text="同意"
                            android:textColor="@color/dim_foreground_light_disabled"
                            android:textSize="@dimen/text_size_13" />

                        <TextView
                            android:id="@+id/agreement"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left|center"
                            android:gravity="left"
                            android:text="《茶码头商家注册协议》"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_13" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5.0dip" >

                        <Button
                            android:id="@+id/reg_btn_commit"
                            android:layout_width="fill_parent"
                            android:layout_height="45dip"
                            android:background="@drawable/login_btn_selector"
                            android:text="@string/login_dialog_reg"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_size_20" />
                    </LinearLayout>
                </TableLayout>
            </RelativeLayout>

            <View
                android:id="@+id/login_loading"
                android:layout_width="135.0dip"
                android:layout_height="135.0dip"
                android:layout_gravity="center"
                android:background="@anim/login_loading" />
        </ViewSwitcher>
    </ScrollView>

    <ImageButton
        android:id="@+id/login_close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/login_scrollview"
        android:layout_alignTop="@+id/login_scrollview"
        android:background="@drawable/login_close_button" />

</RelativeLayout>